# RabiRoute

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  README_zh.md  RabiRoute-Tray.spec  Start-RabiRoute-Health-Watchdog.bat  Start-RabiRoute-MessageAdapter-Watchdog.bat  Start-RabiRoute-Tray.bat  design-qa.md  design-qa_zh.md  gateways.example.json  package-lock.json  package.json  rabiroute-build.SKILL.md  rebuild-and-restart.cmd  wrangler.rabilink-relay.toml  主动智能设计思路.md  主动智能设计思路_en.md  版本更新.md  版本更新日志.md  版本更新日志_en.md
plugin-adapters/rabi-speech/: .gitignore  README.md  README_en.md  config.example.json  pyproject.toml  rabi-plugin.json  requirements.txt
plugin-adapters/rabi-speech/benchmarks/: cases.zh-CN.json  report-metadata.json  report-template.html  speaker-cases.example.json  speaker-validation-policy.example.json
plugin-adapters/rabi-speech/rabispeech/: __init__.py  __main__.py  app.py  audio.py  config.py  contracts.py  events.py  extensions.py  microphone.py  model_discovery.py  persona_voice.py  playback.py  registry.py  remote_audio.py  speaker_profiles.py  speaker_recognition.py  speech_records.py  tts_audio_store.py  windows_audio_session.py  worker_supervisor.py
plugin-adapters/rabi-speech/scripts/: benchmark_models.py  benchmark_speaker_models.py  build-windows-host.ps1  collect_speaker_validation.py  install-service.ps1  install.ps1  install_model_runtime.ps1  install_models.ps1  install_models.py  local_asr_worker.py  local_onnx_vits_worker.py  local_tts_worker.py  migrate_persona_voice.py  patch_windows_launcher.py  (+6 more)
(+1083 files in other folders)
